--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -202,6 +202,11 @@ filename = "../integration_tests/test_import_02.py"
 c = true
 
 [[test]]
+filename = "../integration_tests/import_order_01.py"
+c = true
+disable_main = true
+
+[[test]]
 filename = "../integration_tests/vec_01.py"
 asr = true
 pass = "loop_vectorise"
