Add tests and update the refs.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -285,8 +285,10 @@ RUN(NAME bindc_01            LABELS cpython llvm c)
 RUN(NAME bindc_02            LABELS cpython llvm c)
 RUN(NAME bindc_04            LABELS llvm c)
 RUN(NAME bindc_07            LABELS cpython llvm c)
-RUN(NAME exit_01             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME exit_02     FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
+RUN(NAME exit_01             LABELS cpython llvm c)
+RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
+RUN(NAME exit_03             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
+RUN(NAME exit_04     FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
@@ -514,7 +516,7 @@ RUN(NAME comp_01 LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME bit_operations_i32 LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME bit_operations_i64 LABELS cpython llvm c wasm)
 
-RUN(NAME test_argv_01      LABELS llvm) # TODO: Test using CPython
+RUN(NAME test_argv_01      LABELS cpython llvm)
 RUN(NAME global_syms_01    LABELS cpython llvm c)
 RUN(NAME global_syms_02    LABELS cpython llvm c)
 RUN(NAME global_syms_03_b  LABELS cpython llvm c)
