--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -333,6 +333,10 @@ filename = "../integration_tests/structs_05.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/callback_01.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/bindc_01.py"
 asr = true
 llvm = true
