--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -491,7 +491,8 @@ RUN(NAME str_to_list_cast    LABELS cpython llvm c)
 
 RUN(NAME test_package_01     LABELS cpython llvm)
 RUN(NAME test_pkg_lpdraw     LABELS cpython llvm wasm)
-RUN(NAME test_pkg_lnn        LABELS cpython llvm)
+RUN(NAME test_pkg_lnn_01        LABELS cpython llvm)
+RUN(NAME test_pkg_lnn_02        LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm c)
 RUN(NAME generics_02         LABELS cpython llvm c)
