TEST: Add test case

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -598,6 +598,10 @@ filename = "parser/string2.py"
 ast_new = true
 
 [[test]]
+filename = "parser/string3.py"
+ast_new = true
+
+[[test]]
 filename = "parser/global1.py"
 ast = true
 ast_new = true
