TEST: Add test for array.size

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -280,6 +280,7 @@ RUN(NAME variable_decl_02         LABELS cpython llvm c)
 RUN(NAME variable_decl_03         LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm c)
 RUN(NAME array_expr_02            LABELS cpython llvm c)
+RUN(NAME array_size_01            LABELS cpython llvm c)
 RUN(NAME array_01            LABELS cpython llvm wasm c)
 RUN(NAME array_02            LABELS cpython wasm c)
 RUN(NAME bindc_01            LABELS cpython llvm c)
