--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -340,6 +340,7 @@ RUN(NAME loop_04             LABELS cpython llvm c)
 RUN(NAME loop_05             LABELS cpython llvm c)
 RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
+RUN(NAME if_03    FAIL       LABELS cpython llvm c)
 RUN(NAME print_02            LABELS cpython llvm c)
 RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_types_02       LABELS cpython llvm c wasm)
