--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -821,6 +821,10 @@ filename = "errors/test_assign8.py"
 asr = true
 
 [[test]]
+filename = "errors/test_assign9.py"
+asr = true
+
+[[test]]
 filename = "errors/test_binop1.py"
 asr = true
 
