--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -639,6 +639,10 @@ filename = "errors/structs_01.py"
 asr = true
 
 [[test]]
+filename = "errors/structs_02.py"
+asr = true
+
+[[test]]
 filename = "errors/const_01.py"
 asr = true
 
