TEST: Add struct passing syntax test in cpython

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -455,7 +455,7 @@ RUN(NAME structs_01          LABELS cpython llvm c)
 RUN(NAME structs_02          LABELS cpython llvm c)
 RUN(NAME structs_03          LABELS llvm c)
 RUN(NAME structs_04          LABELS cpython llvm c)
-RUN(NAME structs_05          LABELS llvm c)
+RUN(NAME structs_05          LABELS cpython llvm c)
 RUN(NAME structs_06          LABELS cpython llvm c)
 RUN(NAME structs_07          LABELS llvm c
         EXTRAFILES structs_07b.c)
@@ -480,6 +480,7 @@ RUN(NAME structs_21          LABELS cpython llvm c)
 RUN(NAME structs_22          LABELS cpython llvm c)
 RUN(NAME structs_23          LABELS cpython llvm c)
 RUN(NAME structs_24          LABELS cpython llvm c)
+RUN(NAME structs_25          LABELS cpython llvm c)
 RUN(NAME sizeof_01           LABELS llvm c
         EXTRAFILES sizeof_01b.c)
 RUN(NAME sizeof_02           LABELS cpython llvm c)
