--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -383,12 +383,12 @@ RUN(NAME test_dict_01        LABELS cpython llvm c)
 RUN(NAME test_dict_02        LABELS cpython llvm c)
 RUN(NAME test_dict_03        LABELS cpython llvm)
 RUN(NAME test_dict_04        LABELS cpython llvm)
-RUN(NAME test_dict_05        LABELS cpython llvm)
+RUN(NAME test_dict_05        LABELS cpython llvm c)
 RUN(NAME test_dict_06        LABELS cpython llvm c)
-RUN(NAME test_dict_07        LABELS cpython llvm)
+RUN(NAME test_dict_07        LABELS cpython llvm c)
 RUN(NAME test_dict_08        LABELS cpython llvm c)
 RUN(NAME test_dict_09        LABELS cpython llvm c)
-RUN(NAME test_dict_10        LABELS cpython llvm) # TODO: Add support of dict with string in C backend
+RUN(NAME test_dict_10        LABELS cpython llvm c)
 RUN(NAME test_dict_11        LABELS cpython llvm c)
 RUN(NAME test_dict_bool      LABELS cpython llvm)
 RUN(NAME test_for_loop       LABELS cpython llvm c)
