--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -1082,6 +1082,22 @@ asr = true
 filename = "errors/func_01.py"
 asr = true
 
+[[test]]
+filename = "errors/func_02.py"
+asr = true
+
+[[test]]
+filename = "errors/func_03.py"
+asr = true
+
+[[test]]
+filename = "errors/func_04.py"
+asr = true
+
+[[test]]
+filename = "errors/func_05.py"
+asr = true
+
 # tests/runtime_errors
 [[test]]
 filename = "runtime_errors/test_list_01.py"
