--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -340,6 +340,7 @@ RUN(NAME print_05            LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME print_float         LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME print_list_tuple_01    LABELS cpython llvm c)
 RUN(NAME print_list_tuple_02    LABELS cpython llvm c)
+RUN(NAME print_list_tuple_03    LABELS cpython llvm c)
 
 # CPython and LLVM
 RUN(NAME const_01            LABELS cpython llvm c)
