ASR Pass: Fix print list tuple (#1868)
* PASS: Create aux variable for printing list/tuples
* Add a test
* Update reference tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -360,6 +360,7 @@ RUN(NAME print_05            LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME print_float         LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME print_list_tuple_01    LABELS cpython llvm c NOFAST)
 RUN(NAME print_list_tuple_02    LABELS cpython llvm c NOFAST)
+RUN(NAME print_list_tuple_03    LABELS cpython llvm c NOFAST)
 
 # CPython and LLVM
 RUN(NAME const_01            LABELS cpython llvm c)
