Add and update tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -1119,6 +1119,10 @@ asr = true
 filename = "errors/func_06.py"
 asr = true
 
+[[test]]
+filename = "errors/func_07.py"
+asr = true
+
 # tests/runtime_errors
 [[test]]
 filename = "runtime_errors/test_list_01.py"
