Introduced c_sym and cpython_sym backends

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -381,4 +381,4 @@ jobs:
         shell: bash -l {0}
         run: |
             cd integration_tests
-            ./run_tests.py -b sympy
+            ./run_tests.py -b c_sym cpython_sym
