TEST: Optionally provide Python Libraries

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -37,21 +37,23 @@ set_property(TARGET lpython_rtlib PROPERTY INTERFACE_LINK_LIBRARIES
     ${LPYTHON_RTLIB_LIBRARY})
 target_link_libraries(lpython_rtlib INTERFACE m)
 
-find_package(Python COMPONENTS Interpreter Development)
-execute_process(
-  COMMAND "${Python_EXECUTABLE}"
-  -c "import numpy; print(numpy.get_include())"
-  OUTPUT_VARIABLE NUMPY_INCLUDE_DIR
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-message("\n")
-message("System has the Python development artifacts: ${Python_Development_FOUND}")
-message("The Python include directories: ${Python_INCLUDE_DIRS}")
-message("The Python libraries: ${Python_LIBRARIES}")
-message("The Python library directories: ${Python_LIBRARY_DIRS}")
-message("The Python runtime library directories: ${Python_RUNTIME_LIBRARY_DIRS}")
-message("Python version: ${Python_VERSION}")
-message("Numpy Include Directory: ${NUMPY_INCLUDE_DIR}")
+if (PYTHON_LIBS_REQ)
+    find_package(Python COMPONENTS Interpreter Development)
+    execute_process(
+        COMMAND "${Python_EXECUTABLE}"
+        -c "import numpy; print(numpy.get_include())"
+        OUTPUT_VARIABLE NUMPY_INCLUDE_DIR
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+    message("\n")
+    message("System has the Python development artifacts: ${Python_Development_FOUND}")
+    message("The Python include directories: ${Python_INCLUDE_DIRS}")
+    message("The Python libraries: ${Python_LIBRARIES}")
+    message("The Python library directories: ${Python_LIBRARY_DIRS}")
+    message("The Python runtime library directories: ${Python_RUNTIME_LIBRARY_DIRS}")
+    message("Python version: ${Python_VERSION}")
+    message("Numpy Include Directory: ${NUMPY_INCLUDE_DIR}")
+endif()
 
 enable_testing()
 
@@ -68,6 +70,7 @@ endif ()
 message("Installation prefix: ${CMAKE_INSTALL_PREFIX}")
 message("KIND: ${KIND}")
 message("DISABLE_FAST: ${DISABLE_FAST}")
+message("PYTHON_LIBS_REQ: ${PYTHON_LIBS_REQ}")
 message("LPYTHON: ${LPYTHON}")
 message("LPYTHON_RTLIB_DIR: ${LPYTHON_RTLIB_DIR}")
 message("LPYTHON_RTLIB_LIBRARY: ${LPYTHON_RTLIB_LIBRARY}")
