TEST: Add tests for
- tuple indicing in strings
- call to undefined struct member function
- member func defined inside struct

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -644,6 +644,10 @@ filename = "errors/test_bit_length.py"
 asr = true
 
 [[test]]
+filename = "errors/string_01.py"
+asr = true
+
+[[test]]
 filename = "errors/structs_01.py"
 asr = true
 
@@ -673,6 +677,14 @@ asr = true
 
 [[test]]
 filename = "errors/structs_08.py"
+asr = true
+
+[[test]]
+filename = "errors/structs_09.py"
+asr = true
+
+[[test]]
+filename = "errors/structs_10.py"
 asr = true
 
 [[test]]
